2010-10-26 Dominique Dumont  <domi.dumont@free.fr> 1.216

        * Control.pl: fixed control fields order to be less confusing (thanks to ansgar
	  for the advice)
        * Backend IniFile: Bug fix to write top level parameters before the first INI class
        * Node.pm: Bug fix when calling fetch_element with accepted parameters
        * Model.pm: updated doc to point to overview and introduction on SourceForge wiki
	* example/fstab/Fstab.pl: Fix model so it can be loaded by config-model-edit

2010-10-19 Dominique Dumont  <domi.dumont@free.fr> 1.215

	* Instance.pm and Loader.pm: added some stub to preserve backwards compatibility 

2010-10-19 Dominique Dumont  <domi.dumont@free.fr> 1.213

	* AutoRead.pm: do not clobber configuration file when trying to write erroneous data
	* Value.pm: fix value check based on Parse::RecDescent
	* Dpkg::Copyright: fix bugs masked by above problem
	* Dpkg::Copyright: Fix read/write issues with License that can be stored either 
	  in Files section or their own sections

2010-10-15 Dominique Dumont  <domi.dumont@free.fr> 1.212

	* Value and AnyId: store wrong values when store check is disabled 
	(i.e. config-edit is run with -force option).
	* Debian::Dpkg::Copyright: cosmetic improvements on written file
	* Instance.pm: Removed all overengineered push_no_value_check, pop_no_value_check. 
	This stuff had too many drawbacks of global variables. An optional check parameter 
	was added to a lot of calls on Config::Model. The API was also sanitized with some 
	positional parameters replaced by named parameters. Most of these changes should 
	be internal. The main impact is that read/write backends must now explicitely
	pass this check parameter lest the force_load will not work.
	* ValueComputer: Remove req on Parse::RecDescent version. (Debian bug #597794)
	* Value.pm: added silent parameter to fetch method to avoid displaying warnings on STDOUT
	* Enable read and write of utf8 characters
